// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SideNav component should render SideNav component while logged in 1`] = `
<Sider
  collapsed={false}
  collapsible={true}
  onCollapse={[Function]}
>
  <div
    className="logo"
  />
  <Menu
    defaultSelectedKeys={
      Array [
        "home",
      ]
    }
    mode="inline"
    selectedKeys={
      Array [
        "home",
      ]
    }
    theme="dark"
  >
    <MenuItem
      icon={<ForwardRef(HomeOutlined) />}
      key="home"
      onClick={[Function]}
    >
      Home
    </MenuItem>
    <SubMenu
      icon={<ForwardRef(UserOutlined) />}
      key="user"
      title="User"
    >
      <MenuItem
        key="user_profile"
        onClick={[Function]}
      >
        My Profile
      </MenuItem>
      <MenuItem
        key="user_projects"
        onClick={[Function]}
      >
        My Projects
      </MenuItem>
      <MenuItem
        key="user_settings"
        onClick={[Function]}
      >
        Account Settings
      </MenuItem>
    </SubMenu>
    <SubMenu
      icon={<ForwardRef(TeamOutlined) />}
      key="team"
      title="Team"
    >
      <MenuItem
        key="team_profile"
        onClick={[Function]}
      >
        My Team
      </MenuItem>
      <MenuItem
        key="team_projects"
        onClick={[Function]}
      >
        Team Projects
      </MenuItem>
      <MenuItem
        key="team_settings"
        onClick={[Function]}
      >
        Team Settings
      </MenuItem>
    </SubMenu>
    <MenuItem
      icon={<ForwardRef(LogoutOutlined) />}
      key="logout"
      onClick={[Function]}
    >
      Logout
    </MenuItem>
  </Menu>
</Sider>
`;

exports[`render SideNav component should render SideNav component while logged out 1`] = `
<Sider
  collapsed={false}
  collapsible={true}
  onCollapse={[Function]}
>
  <div
    className="logo"
  />
  <Menu
    defaultSelectedKeys={
      Array [
        "home",
      ]
    }
    mode="inline"
    selectedKeys={
      Array [
        "home",
      ]
    }
    theme="dark"
  >
    <MenuItem
      icon={<ForwardRef(HomeOutlined) />}
      key="home"
      onClick={[Function]}
    >
      Home
    </MenuItem>
    <MenuItem
      icon={<ForwardRef(LoginOutlined) />}
      key="login"
      onClick={[Function]}
    >
      Login
    </MenuItem>
    <MenuItem
      icon={<ForwardRef(LoginOutlined) />}
      key="register"
      onClick={[Function]}
    >
      Register
    </MenuItem>
  </Menu>
</Sider>
`;
